images are no longer stretched wide

--- a/responsive-ui/static/css/styles.css
+++ b/responsive-ui/static/css/styles.css
@@ -314,7 +314,7 @@ ul {
 
 .bookedImg, .searchImg {
     margin-bottom: 1em;
-    width: 100%;
+    width: auto;
     height: 250px;
 }
 
